# fastapi_yamdb

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1bf6f42f96a3_user_role.py  25780df44b67_.py  d77a8fb2224f_title.py
api/: auth.py  categories.py  comments.py  genres.py  reviews.py  titles.py  users.py
api/utils/: categories.py  comments.py  genres.py  permissions.py  reviews.py  security.py  titles.py  users.py  util_func.py
db/: db_setup.py
db/models/: review.py  user.py
pydantic_shemas/: review.py  user.py
